# agentic-memory

./: .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  DOCUMENTATION_SUMMARY.md  GIT-INTEGRATION-SPEC.md  LICENSE  README.md  SPEC-browser-extension-and-ACP-proxy.md  SPEC.md  TODO-high-value-feature-ideas.md  TODO.md  agentic-memory-experiments-runtime.ipynb  agentic-memory-experiments-web.ipynb  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  tsconfig.base.json
.agentic-memory/: .graphignore
.claude/: settings.local.json
.codememory/: .graphignore  config.json
.codex-plugin/: plugin.json
.ipynb_checkpoints/: agentic-memory-experiments-checkpoint.ipynb
.planning/: PRD-SpacetimeDB-TGRAG.md  PROJECT.md  ROADMAP.md  STATE.md  openclaw-gtm-plan.md
bench/: README.md  build_temporal_kg.ts  measure_tokens.ts  report_results.ts  run_eval.py  run_queries.ts
desktop_shell/: README.md  __init__.py  __main__.py  app.py  config.py
docs/: AGENTIC_MEMORY_MCP_GUIDANCE.md  AM_PROXY_CODEX.md  API.md  ARCHITECTURE.md  CODEX_ROLLOUT_JSONL.md  FIELD_TEST_TEMPLATE.md  GIT_GRAPH.md  INSTALLATION.md  JIT_TRACING.md  MCP_INTEGRATION.md  MCP_TOOL_REFERENCE.md  PLAN-openclaw-integration.md  PLUGIN_GA_PLAN.md  PRODUCT_DOGFOODING.md  PROVIDER_CONFIGURATION.md  PUBLIC_PLUGIN_SURFACES.md  SESSION_ARTIFACT_ADAPTERS.md  SETUP_FULL_STACK.md  SPACETIMEDB_OPERATIONS.md  TOOL_USE_ANNOTATION.md  TROUBLESHOOTING.md  notebooklm_context.md  skill-adapter-security.md  skill-adapter-workflows.md
examples/: README.md  basic_usage.md  docker_setup.md  mcp_prompt_examples.md
experiments/: __init__.py
scripts/: backfill_healthcare_temporal.py  check_healthcare_stop_date_blast_radius.py  check_healthcare_temporal_integrity.py  export_embedded_synthea.py  generate_notebooklm_docs.py  import_embedded_healthcare_chunks.py  ingest_synthea.py  preflight_checks.py  query_typescript_calls.js  run_exp1.sh  run_exp2.sh  run_ingest.sh  run_parallel_healthcare_import.sh  run_parallel_healthcare_temporal_backfill.sh  spacetime-target.mjs  split_repomix.py
tests/: __init__.py  conftest.py  openclaw_harness.py  test_am_server.py  test_base.py  test_claim_extraction.py  test_cli.py  test_code_search.py  test_config_validator.py  test_connection.py  test_conversation_graph_writer.py  test_conversation_pipeline.py  test_conversation_reranking.py  test_embedding.py  test_embedding_runtime.py  test_fhir_loader.py  (+23 more)
(+494 files in other folders)
