[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-memory-labs"
version = "0.1.8"
description = "Agentic Memory: Structural Code Graph with Neo4j and MCP"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = { text = "BSL-1.1" }
authors = [
    { name = "Agentic Memory Labs" },
]
keywords = ["mcp", "neo4j", "code-graph", "agent-memory", "rag"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "neo4j",
    "openai",
    "tree-sitter",
    "tree-sitter-python",
    "tree-sitter-javascript",
    "watchdog",
    "python-dotenv",
    "mcp",
    "pydantic>=2.0.0",
    "google-genai>=1.0.0",
    "basedpyright>=1.39.0",
    "groq>=0.10.0",
    "crawl4ai>=0.8.0",
    "markdownify>=1.2.0",
    "pymupdf4llm>=1.27.0",
    "httpx>=0.27.0",
    "apscheduler>=3.10.0,<4.0",
    "sqlalchemy>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
]

[project.scripts]
agent-memory = "agentic_memory.cli:main"
codememory = "agentic_memory.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "responses>=0.23.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "types-requests",
]

[project.urls]
Homepage = "https://agentmemorylabs.com"
Documentation = "https://github.com/jarmen423/agentic-memory#readme"
Repository = "https://github.com/jarmen423/agentic-memory"
Issues = "https://github.com/jarmen423/agentic-memory/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_memory", "src/codememory"]

[tool.hatch.build]
skip-excluded-dirs = true

[tool.hatch.build.targets.sdist]
only-include = [
    "src",
    "tests",
    "docs",
    "README.md",
    "LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
